<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_root"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundcolor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_pesan"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1px"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/btn_pesan"
                android:text="@string/pesan"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                style="@style/DashboardButton" />

            <Button
                android:id="@+id/btn_lihatPesanan"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/btn_lihat_pesanan"
                android:text="@string/lihat_pesanan"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                style="@style/DashboardButton"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_infoHotel"
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1px"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/btn_info_hotel"
                android:text="@string/info_hotel"
                android:textColor="@color/yellow"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_gallery"
                style="@style/DashboardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/btn_gallery"
                android:text="@string/gallery"
                android:textColor="@color/yellow"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>